--- a/Homework 14/index.html
+++ b/Homework 14/index.html
@@ -36,29 +36,29 @@
                   <div class="form-group">
                     <ul class="list-group" id="filters">
                       <li class="filter list-group-item">
-                        <label for="date">Enter a Date</label>
-                        <input class="form-control" id="datetime" type="text" placeholder="MM/DD/YYYY">
+                        <label for="date">Enter a Date:</label>
+                        <input class="form-control" id="datetime" type="text" placeholder="m/d/yyyy">
                       </li>
                       <li class="filter list-group-item">
-                        <label for="city">Enter a City</label>
-                        <input class="form-control" id="cityname" type="text" placeholder="">
+                        <label for="city">Enter a City:</label>
+                        <input class="form-control" id="citySearch" type="text" placeholder="ex: naples">
                       </li>
                       <li class="filter list-group-item">
-                        <label for="state">Select a State</label>
+                        <label for="state">Choose a State:</label>
                         <select id="statename"></select>  
                       </li>
                       <li class="filter list-group-item">
-                        <label for="country">Select a Country</label>
+                        <label for="country">Choose a Country:</label>
                         <select id="countryname"></select>  
                       </li>
                       <li class="filter list-group-item">
-                        <label for="shape">Select a Shape</label>
+                        <label for="shape">Choose a Shape:</label>
                         <select id="shapename"></select>      
                       </li>
                     </ul>
                   </div>
                   <div class="text-center"> 
-                    <button id="filter-btn" type="submit" class="btn btn-success" data-toggle="button" aria-pressed="false">Filter Table</button>
+                    <button id="filter-btn" type="submit" class="btn btn-success" data-toggle="button" aria-pressed="false">Search</button>
                     <p></p>
                   </div>
                 </form>
@@ -87,7 +87,7 @@
       </div>
     </div>
     <footer class="footer">
-      <span class="bottom">UFO Sightings</span>
+      <span class="bottom">UFO Sighting Database</span>
     </footer>
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script>
